--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 	<div class="cart"></div>
+	<div class="email-field">
+		<p>Имя: <input type="text" id="name"></p>
+		<p>Email: <input type="text" id="email"></p>
+		<p>Телфон: <input type="text" id="phone"></p>
+		<p><button class="send">Заказать</button></p>
+	</div>
 	
 	<script src="goods.json"></script>
 	<script src="cart.js"></script>
